--- a/index.html
+++ b/index.html
@@ -2,10 +2,19 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/css/master.css">
-    <title></title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Home</title>
   </head>
   <body>
-
+    <header>
+      <nav class="navBar">
+        <ul class="navLinks">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Workouts</a></li>
+          <li><a href="#">Food</a></li>
+        </ul>
+      </nav>
+        <img class="logo" src="assets/fityes1.svg" alt="logo">
+    </header>
   </body>
 </html>
