finished homepage and added other pages

--- a/index.html
+++ b/index.html
@@ -6,15 +6,78 @@
     <title>Home</title>
   </head>
   <body>
-    <header>
-      <nav class="navBar">
-        <ul class="navLinks">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Workouts</a></li>
-          <li><a href="#">Food</a></li>
-        </ul>
-      </nav>
-        <img class="logo" src="assets/fityes1.svg" alt="logo">
-    </header>
+    <nav class="navBar">
+      <ul class="navLinks">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="workouts.html">Workouts</a></li>
+        <li><a href="#">Food</a></li>
+      </ul>
+    </nav>
+      <img class="logo" src="assets/fityes1.svg" alt="logo">
+    <div class="mainContainer">
+      <div class="banner">
+        <h1>Welcome to FitYes!<br>
+          Your fitness journey begins now.
+        </h1>
+      </div>
+      <div class="threeCard">
+        <div class="card">
+          <div class="container">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+              <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-8-3a1 1 0 00-.867.5 1 1 0 11-1.731-1A3 3 0 0113 8a3.001 3.001 0 01-2 2.83V11a1 1 0 11-2 0v-1a1 1 0 011-1 1 1 0 100-2zm0 8a1 1 0 100-2 1 1 0 000 2z" clip-rule="evenodd" />
+            </svg>
+          </div>
+          <div class="text">
+            <h2>What is this?</h2>
+            <p>FitYes is a website dedicated to assisting you into the world of fitness.
+              We have collected tons of different workouts, focusing on each muscle group that
+              will assist you in working out. We also have
+              a food guide too!
+            </p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="container">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+              <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7 4a1 1 0 11-2 0 1 1 0 012 0zm-1-9a1 1 0 00-1 1v4a1 1 0 102 0V6a1 1 0 00-1-1z" clip-rule="evenodd" />
+            </svg>
+          </div>
+          <div class="text">
+            <h2>I've never worked out before!</h2>
+            <p>Whether you're a gym rat — or a newbie in need of guidance — FitYes has
+            everything you need to reach your goals. We include visuals to help teach you
+            proper movements for all kinds of exercises.
+            </p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="container">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+              <path d="M10 12a2 2 0 100-4 2 2 0 000 4z" />
+              <path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd" />
+            </svg>
+          </div>
+          <div class="text">
+            <h2>See the change.</h2>
+            <p> Following our fitness guides will help you reach your goals fast! With
+              proper training and diet, you will see noticeable progress being made.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="twoUp">
+        <div class="element">
+          <img class="pic"src="https://media-cldnry.s-nbcnews.com/image/upload/MSNBC/Components/Photo/_new/g-hlt-010313-gym-441p.jpg" alt="gym">
+        </div>
+        <div class="caption">
+          <h3>Working out for the first time can be intimidating. <br>
+            It doesn't have to be.</h3>
+        </div>
+
+      </div>
+    </div>
+
   </body>
 </html>
