added more workouts

--- a/workouts.html
+++ b/workouts.html
@@ -24,11 +24,17 @@
           </div>
           <div class="text">
             <h2>Deadlift</h2>
-            <p>FitYes is a website dedicated to assisting you into the world of fitness.
-              We have collected tons of different workouts, focusing on each muscle group that
-              will assist you in working out. We also have
-              a food guide too!
+            <p>The deadlift is an essential movement when lifting weights. It allows you to
+              target multiple large muscle groups at the same time. Deadlift's are a compound
+              exercise that work your hamstrings, glutes, back, and core. The standard deadlift is essential
+              weightlifters.
             </p>
+            <ul>
+              <li>Stand behind the barbell with your feet hip-width apart and your knees slightly bent.</li>
+              <li>Hinge at the hips, slightly bending your knees. Push your butt far back, while keeping your core engaged so that your back remains flat</li>
+              <li>Grip barbell with both hands placed wider than your knees.</li>
+              <li>Pause at the top and squeeze your glutes. Make sure you're NOT rounding your back as you lift the weight</li>
+            </ul>
           </div>
         </div>
 
@@ -38,10 +44,16 @@
           </div>
           <div class="text">
             <h2>Bench Press</h2>
-            <p>Whether you're a gym rat — or a newbie in need of guidance — FitYes has
-            everything you need to reach your goals. We include visuals to help teach you
-            proper movements for all kinds of exercises.
+            <p>The bench press is an exercise that useful for toning the muscles of the upper body, which includes
+              the pectorals, arms, and shoulders. A traditional bench press is done on a flat bench and pressing a
+              barbell up and down at chest height.
             </p>
+            <ul>
+              <li>Draw your shoulder blades back behind you to prevent pressing with rounded shoulders.</li>
+              <li>Grasp the barbell with an overhand grip, your arms should be slightly wider than shoulder-width apart</li>
+              <li>Slowly lift the barbell from the rack, locking your elbows</li>
+              <li>Bring the barbell to your chest, at the nipple line, and extend your arms as you lift the bar above your chest</li>
+            </ul>
           </div>
         </div>
 
@@ -51,15 +63,123 @@
           </div>
           <div class="text">
             <h2>Squat</h2>
-            <p> Following our fitness guides will help you reach your goals fast! With
-              proper training and diet, you will see noticeable progress being made.
+            <p> A barbell squat, is a compound exercise that activates muscle groups throughout your lower body, which
+              include your hamstrings, glutes, and lower back muscles. It's a classic way to start leg day and an essential
+              movement to cure chicken legs.
             </p>
+            <ul>
+              <li>While facing the barbell, step underneath it and place your hands on both sides of it. It should rest on the muscles of your upper back</li>
+              <li>Step back from the rack while carrying the barbell. Your feet should be slightly wider than hip-width apart</li>
+              <li>Descend by flexing the knees, refraining from moving the hips back as much as possible</li>
+              <li>Continue all the way down and go up when the upper legs are parallel to the floor</li>
+            </ul>
           </div>
         </div>
       </div>
       <div class="text">
-        <h2>While it's good to switch out your workouts, these three movements should always be included.</h2>
+        <h2>While it's good to switch out your workouts, these three movements should always be included.<br>
+            Click below to see more workouts!
+        </h2>
       </div>
+      <button type="button" class="collapsible">Back Day Workouts</button>
+      <div class="content">
+        <h3>On a back day, you might want to try using these workouts...</h3>
+        <div class="twoUp">
+          <div class="pic">
+            <img class="image" src="https://hips.hearstapps.com/ame-prod-menshealth-assets.s3.amazonaws.com/main/assets/bent-over-row.gif?resize=768:*" alt="">
+          </div>
+          <div class="description">
+            <h4>Bent-over Row</h4>
+            <ul>
+              <li>Grab a barbell with an overhand grip, hands slightly wider than shoulder width apart. With your legs slightly bent, keep your back perfectly straight and bend your upper body until it’s almost perpendicular to the floor.</li>
+              <li>From here row the weight upwards into the lower part of your chest. Pause. And return under control to the start position.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="twoUp">
+          <div class="pic">
+            <img class="image" src="https://qph.fs.quoracdn.net/main-qimg-6225bc728e7f865437fdf17cd93d2485" alt="">
+          </div>
+          <div class="description">
+            <h4>Lat Pull-Down</h4>
+            <ul>
+              <li>Grasp the bar with a wide grip with an overhand, knuckles-up grip. Other positions and grips are possible, but start with this standard position.</li>
+              <li>Slowly exhale and initiate the downward pull by first depressing (lower) your scapulae, then pulling the bar downward towards the top or mid-section of your chest. </li>
+              <li>Pause momentarily, then slowly return to your starting position by allowing the bar to move upwards until your elbows are fully extended, then allow your scapule to rise slightly. Repeat the movement.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="twoUp">
+          <div class="pic">
+            <img class="image" src="https://media2.giphy.com/media/k6x4uQK3eb22iwQYeF/giphy.gif?cid=790b76111d426b24eb976978db6d985c7e7f91cf2ad9d4f4&rid=giphy.gif&ct=g" alt="">
+          </div>
+          <div class="description">
+            <h4>The Pull-Up</h4>
+            <ul>
+              <li>Start by standing directly below a pull-up bar. Place your hands in an overhand grip (palms facing away from your body) with your hands slightly further than shoulder-width apart.</li>
+              <li>Inhale, then exhale. Lift your feet up from the floor or box so that you’re hanging from the bar, and engage your core by pulling your belly button in toward your spine. Pull your shoulders back and down. </li>
+              <li>Engaging the muscles in your arms and back, bend your elbows and raise your upper body up toward the bar until your chin is over the bar. Go down and repeat.</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <button type="button" class="collapsible2">Chest Day Workouts</button>
+      <div class="content2">
+        <h3>On chest day, you might want to try these workouts...</h3>
+      </div>
+      <button type="button" class="collapsible3">Leg Day Workouts</button>
+      <div class="content3">
+        <h3>On leg day, you might want to try these workouts...</h3>
+      </div>
+      <script type="text/javascript">
+      var coll = document.getElementsByClassName("collapsible");
+      var i;
+
+      for (i = 0; i < coll.length; i++) {
+        coll[i].addEventListener("click", function() {
+          this.classList.toggle("active");
+          var content = this.nextElementSibling;
+          if (content.style.display === "block") {
+            content.style.display = "none";
+          } else {
+            content.style.display = "block";
+          }
+        });
+      }
+    </script>
+    <script type="text/javascript">
+    var coll = document.getElementsByClassName("collapsible2");
+    var i;
+
+    for (i = 0; i < coll.length; i++) {
+      coll[i].addEventListener("click", function() {
+        this.classList.toggle("active");
+        var content = this.nextElementSibling;
+        if (content.style.display === "block") {
+          content.style.display = "none";
+        } else {
+          content.style.display = "block";
+        }
+      });
+    }
+  </script>
+  <script type="text/javascript">
+  var coll = document.getElementsByClassName("collapsible3");
+  var i;
+
+  for (i = 0; i < coll.length; i++) {
+    coll[i].addEventListener("click", function() {
+      this.classList.toggle("active");
+      var content = this.nextElementSibling;
+      if (content.style.display === "block") {
+        content.style.display = "none";
+      } else {
+        content.style.display = "block";
+      }
+    });
+  }
+</script>
     </div>
 
   </body>
