--- a/food.html
+++ b/food.html
@@ -2,8 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/workouts-style.css">
-    <title>Workouts</title>
+    <link rel="stylesheet" href="css/food-style.css">
+    <title>Food Guide</title>
   </head>
   <body>
     <nav class="navBar">
@@ -14,6 +14,67 @@
       </ul>
     </nav>
       <img class="logo" src="assets/fityes1.svg" alt="logo">
+    <div class="mainContainer">
+      <h1>What foods should I eat before and after I workout?</h1>
+      <h2>Eating the right foods before and after exercise is vital to your results. Much like a car using gas, your body uses carbohydrates for fuel. They give you the energy to power through your workout. After finising a workout, refuel with a combination of protein and carbs will help you rebuild muscle.</h2>
+      <div class="twoUp">
+        <div class="description">
+          <h3>Before: Fruit-and-Yogurt Smoothie</h3>
+          <p>Smoothies are easy to digest, so you won’t feel sluggish during your workout. But many store-bought versions are high in added sugar. Whip up your own version with protein-rich yogurt and fruit, which packs in energy-boosting carbs. Blend it with water or ice to help you stay hydrated. Research shows that not getting enough fluids can zap your strength and endurance.</p>
+        </div>
+        <div class="pic">
+          <img class="image" src="https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/articles/health_tools/foods_to_eat_before_workout_slideshow/493ss_thinkstock_rf_photo_of_berry_smoothie.jpg" alt="">
+        </div>
+      </div>
+      <div class="twoUp">
+        <div class="pic">
+          <img class="imageLeft" src="https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/articles/health_tools/foods_to_eat_before_workout_slideshow/493ss_thinkstock_rf_photo_of_scrambled_eggs_with_toast.jpg" alt="">
+        </div>
+        <div class="descriptionRight">
+          <h3>After: Egg and Whole-Wheat Toast</h3>
+          <p>The bread and jelly in this lunchbox staple serve up the carbs. They give you the energy your muscles need during exercise. The peanut butter adds a dose of protein, which helps you feel full, and that can help fend off post-workout cravings and binges. In fact, research shows that eating small amounts of peanuts can help you maintain a healthy weight. Headed on an easy walk or to yoga class? Half a sandwich may be all you need.</p>
+        </div>
 
+      </div>
+      <div class="twoUp">
+        <div class="description">
+          <h3>Before: Banana</h3>
+          <p>Only have 5 or 10 minutes before your workout? Snack on a banana. Their easy-to-digest carbs power you up without weighing you down. They’re also a good source of antioxidants and potassium, a mineral that may help prevent muscle cramps. Toss one into your gym bag for a last-minute snack.</p>
+        </div>
+        <div class="pic">
+          <img class="image" src="https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/articles/health_tools/foods_to_eat_before_workout_slideshow/493ss_thinkstock_rf_photo_of_hand_peeling_banana.jpg" alt="">
+        </div>
+      </div>
+      <div class="twoUp">
+        <div class="pic">
+          <img class="imageLeft" src="https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/articles/health_tools/foods_to_eat_before_workout_slideshow/493ss_thinkstock_rf_photo_of_hand_holding_bowl_of_yogurt.jpg" alt="">
+        </div>
+        <div class="descriptionRight">
+          <h3>After: Greek Yogurt and Fruit</h3>
+          <p>One cup of this creamy treat offers 20 grams of protein. You can add even more nutrition by topping your bowl with fruit to add energy-boosting carbs. If you use antioxidant-rich blueberries, you’ll get even more benefit. Research shows that eating them after a workout can help with the muscle inflammation brought on by exercise.</p>
+        </div>
+
+      </div>
+      <div class="twoUp">
+        <div class="description">
+          <h3>Before: Oatmeal With Low-Fat Milk and Fruit</h3>
+          <p>Do you work out in the morning? Start your day with a bowl of high-fiber, whole grain oatmeal and fruit. Your body digests the carbs in this combo more slowly, so your blood sugar stays steadier. You’ll feel energized for longer. For an extra dose of protein and bone-building calcium, stir in some low-fat milk.</p>
+        </div>
+        <div class="pic">
+          <img class="image" src="https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/articles/health_tools/foods_to_eat_before_workout_slideshow/493ss_thinkstock_rf_photo_of_mixed_berries_oatmeal.jpg" alt="">
+        </div>
+      </div>
+      <div class="twoUp">
+        <div class="pic">
+          <img class="imageLeft" src="https://img.webmd.com/dtmcms/live/webmd/consumer_assets/site_images/articles/health_tools/foods_to_eat_before_workout_slideshow/493ss_thinkstock_rf_baked_chicken_rice_salad_dish.jpg" alt="">
+        </div>
+        <div class="descriptionRight">
+          <h3>After: Chicken, Brown Rice, and Veggies</h3>
+          <p>There’s a reason skinless chicken breast is thought of as a slim-down food: Half of one packs in 27 grams of protein in only 142 calories. It also has a lot of vitamin B-6, a nutrient important for your immune system. Serve it with brown rice and veggies for the right combination of carbs and nutrients.</p>
+        </div>
+
+      </div>
+      <h2>Images and text are from <a class="link" href="https://www.webmd.com/fitness-exercise/ss/slideshow-foods-for-workout">Webmd</a> </h2>
+    </div>
   </body>
 </html>
