--- a/workouts.html
+++ b/workouts.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/workouts-style.css">
-    <title>Workouts</title>
+    <title>Workout Guide</title>
   </head>
   <body>
     <nav class="navBar">
@@ -17,6 +17,7 @@
 
     <div class="mainContainer">
       <h1>The BIG 3</h1>
+      <h2>While it's good to switch out your workouts, these three movements should always be included.</h2>
       <div class="threeCard">
         <div class="card">
           <div class="container">
@@ -77,7 +78,7 @@
         </div>
       </div>
       <div class="text">
-        <h2>While it's good to switch out your workouts, these three movements should always be included.<br>
+        <h2>
             Click below to see more workouts!
         </h2>
       </div>
@@ -127,10 +128,88 @@
       <button type="button" class="collapsible2">Chest Day Workouts</button>
       <div class="content2">
         <h3>On chest day, you might want to try these workouts...</h3>
+        <div class="twoUp">
+          <div class="pic">
+            <img class="image" src="https://i.makeagif.com/media/5-26-2015/JyukOe.gif" alt="">
+          </div>
+          <div class="description">
+            <h4>Incline Bench Press</h4>
+            <ul>
+              <li>Grab a barbell with an overhand grip, hands slightly wider than shoulder width apart. Lift it and hold it above your chest</li>
+              <li>Extend arms upward, locking out elbows</li>
+              <li>Lower the bar straight down in a slow, controlled movement to your chest. Pause, then press the bar in a straight line back up to the starting position.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="twoUp">
+          <div class="pic">
+            <img class="image" src="https://j.gifs.com/g5vrRr@facebook.gif" alt="">
+          </div>
+          <div class="description">
+            <h4>Chest Press Machine</h4>
+            <ul>
+              <li>Adjust seat so the handles are aligned with your chest</li>
+              <li>While maintaining contact between your back and the padding, press handles outwards without locking your elbows.</li>
+              <li>Allow the handles to slowly come in until they are in line with your chest, no farther. Anything farther than chest distance will put excessive stress on your shoulders.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="twoUp">
+          <div class="pic">
+            <img class="image" src="https://thumbs.gfycat.com/TallOblongGalapagossealion-size_restricted.gif" alt="">
+          </div>
+          <div class="description">
+            <h4>Chest Fly Machine</h4>
+            <ul>
+              <li>Adjust seat so the handles are aligned with your chest</li>
+              <li>Grab the handles so that your palms are facing forward. Press your arms together in front of your chest with a slow, controlled movements</li>
+              <li>Bring your arms slowly back to the starting position, opening your chest and keeping posture strong and upright.</li>
+            </ul>
+          </div>
+        </div>
       </div>
       <button type="button" class="collapsible3">Leg Day Workouts</button>
       <div class="content3">
         <h3>On leg day, you might want to try these workouts...</h3>
+        <div class="twoUp">
+          <div class="pic">
+            <img class="image" src="https://www.verywellfit.com/thmb/mPywjAaUmhlksnJQC-ZiiTzMBf4=/3000x1687/smart/filters:no_upscale()/50-3498610-Leg-Press-GIF-689350b314ef47f4802f7fc74349b410.gif" alt="">
+          </div>
+          <div class="description">
+            <h4>Leg Press Machine</h4>
+            <ul>
+              <li>Brace your abdominal muscles and push the platform away with your heels and forefoot. Your heels should remain flat on the footplate. The front of your foot or toes should never be used exclusively to move the pad forward.</li>
+              <li>Extend your legs and keep your head and back flat against the seat pad. </li>
+              <li>Return the footplate back to the starting position by gradually bending the knees.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="twoUp">
+          <div class="pic">
+            <img class="image" src="https://thumbs.gfycat.com/IdleAnyHoneybadger-size_restricted.gif" alt="">
+          </div>
+          <div class="description">
+            <h4>Leg Curl Machine</h4>
+            <ul>
+              <li>Adjust the machine lever to fit your height and sit on the machine with your back against the back support pad.</li>
+              <li>As you exhale, pull the machine lever as far as possible to the back of your thighs by flexing at the knees. Keep your torso stationary at all times. Hold the contracted position for a second.</li>
+              <li>Slowly return to the starting position as you breathe in.</li>
+            </ul>
+          </div>
+        </div>
+        <div class="twoUp">
+          <div class="pic">
+            <img class="image" src="https://thumbs.gfycat.com/WatchfulLivelyIlsamochadegu-max-1mb.gif" alt="">
+          </div>
+          <div class="description">
+            <h4>Leg Extension Machine</h4>
+            <ul>
+              <li>Adjust the machine to fit your height and ensure the cylinder lies above your ankles</li>
+              <li>Slowly raise your legs until fully extended. Hold for one second at the top.</li>
+              <li>Lower your legs in a controlled motion. Repeat.</li>
+            </ul>
+          </div>
+        </div>
       </div>
       <script type="text/javascript">
       var coll = document.getElementsByClassName("collapsible");
