--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <ul class="navLinks">
         <li><a href="index.html">Home</a></li>
         <li><a href="workouts.html">Workouts</a></li>
-        <li><a href="#">Food</a></li>
+        <li><a href="food.html">Food</a></li>
       </ul>
     </nav>
       <img class="logo" src="assets/fityes1.svg" alt="logo">
